Fixed nav bar spacing

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -32,11 +32,11 @@ a
   display: flex
   flex-direction: row
 
-
 #popup
   display: flex
   flex-direction: row
   align-items: center
+  justify-content: flex-start
   background:  linear-gradient(to bottom left,  rgba(50,50,50,1), rgba(175,175,175,0))
   z-index: 100
   height: 3rem
@@ -44,9 +44,8 @@ a
   top: 0
 
   .list-item
-    margin: 0
-    flex-grow: 1
-    text-align: center
+    margin: 0 1rem
+    // flex-grow: 1
     font-size: 30px
     font-family: $primary-font
     color: white
@@ -59,7 +58,16 @@ a
   .list-item-right img
     margin: 0
     text-align: center
+    align-self: flex-end
     flex-grow: 1
+
+  .list-item-icons
+    display: flex
+    width: 100%
+    flex-direction: row
+    justify-content: flex-end
+
+
 //////////////////////////////////////////
 // ng-animate classes for popout navbar
 .animate-nav
