--- a/sass/project-styles.sass
+++ b/sass/project-styles.sass
@@ -18,14 +18,33 @@ $trans-blue: #5b88f6
   #iframe-console
     height: 100vh
     width: 100vh
+    margin-bottom: 10rem
 
   #iframe-console h1
     color: white
     text-align: center
 
+  #project-view-container
+    display: flex
+    flex-direction: row
+    width: 100vh
+
+  #portfolio-container    
+    background: linear-gradient(to bottom right,
+    rgba(100,100,100,.7), rgba(50,50,50,.7), rgba(255,255,255,.6), rgba(169,169,169,.6))
+
+
+  #project-panel
+    font-family: $primary-font
+    width: 30vh
+    margin-right: 2rem
+
   #project-iframe
     height: 100vh
-    width: 100vh
+    width: 70vh
+
+
+
 
   h1
     margin: .5rem
